# litmus-mcp-server

./: .dockerignore  .gitignore  .gitlab-ci.yml  .mcp.json  .mcp.json.example  Dockerfile  LICENSE  README.md  TEMPLATE_.mcp.json  claude_desktop_config.example.json  claude_desktop_config_venv.example.json  forclaude_mcp-server-testing.pcapng  forclaude_mcp-work.txt  forclaude_mcp-work_oauth-error.txt  glama.json  mcp-inspector-serverconf  pyproject.toml  run.sh
.claude/: CLAUDE.md  TODO.md
.claude/commands/: start.md
.github/workflows/: cd.yml  ci.yml  docker.yaml  mcpb.yaml
deploy/: .env.example  Caddyfile  docker-compose.https.yml
desktop-extension/: .gitignore  README.md  manifest.json  package.json
desktop-extension/server/: index.js
helm/chart/: Chart.yaml  values.yaml
helm/chart/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
helm/values/: cs.yaml  dev.yaml  prod.yaml  qa.yaml  staging.yaml
src/: cli_client.py  client_utils.py  config.py  conversation.py  env_config.py  server.py  utils.py  web_client.py
src/tools/: data_tools.py  devicehub_tools.py  digitaltwins_tools.py  dm_tools.py  lem_tools.py  marketplace_tools.py  resource_tools.py  sdk_cli_tools.py  system_tools.py
src/utils/: async_utils.py  auth.py  formatting.py
static/: mcp-panels.js  query_script.js  query_streaming_script.js  style.css
templates/: 500.html  _panels.html  _tool_modal.html  base.html  health.html  query.html  query_streaming.html  setup.html  update_env.html
tests/: __init__.py  conftest.py  live_tool_verification.py  test_authentication.py  test_bridge_routing.py  test_cli_backed_tools.py  test_connection_fallback.py  test_env_config.py  test_eval_fixes.py  test_influxdb_validation.py  test_integration_live.py  test_lem_tools.py  test_mcp_tools.py  test_native_tls.py  test_sdk_cli_tools.py  test_sdk_compat.py  test_tool_registry.py  test_web_ui_config.py
