[project]
name = "litmus-mcp-server"
version = "0.1.0"
description = "Litmus MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "influxdb>=5.3.2",
    "litmussdk",
    "mcp[cli]>=1.17.0",
    "nats-py>=2.11.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "python-multipart>=0.0.20",
]

[dependency-groups]
cve-patches = [
    "h11>=0.16.0",
]
lint = [
    "black>=25.9.0",
    "radon>=6.0.1",
    "ruff>=0.14.0",
]
test = [
    "pytest>=8.4.2",
    ]


[tool.uv.sources]
litmussdk = { url = "https://github.com/litmusautomation/litmus-sdk-releases/releases/download/2.0.0/litmussdk-2.0.0-py3-none-any.whl" }

[tool.ruff]
exclude = [
    ".venv",
    "venv",
    "site-packages",
    "build",
    "dist",
    ".pytest_cache",
    ".ruff_cache",
    "__init__.py",
    "dev_tests"
]
line-length = 88
indent-width = 4
[tool.ruff.lint.pydocstyle]
convention = "google"
